changed States.states from dict() to list() for sorting.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//jinja2/utils.py=utf-8
+encoding//werkzeug/contrib/cache.py=utf-8
 encoding/itsdangerous.py=utf-8
