moved header and footer into cache.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//jinja2/__init__.py=utf-8
+encoding//jinja2/environment.py=utf-8
 encoding//jinja2/utils.py=utf-8
 encoding//werkzeug/contrib/cache.py=utf-8
 encoding/itsdangerous.py=utf-8
